# kalypso-symbiotic-data-bridge

./: Cargo.toml  Dockerfile.amd64  Dockerfile.arm64  IBaseDelegator.json  IOptInService.json  IRegistry.json  IVault.json  IVaultStorage.json  KalypsoMiddleware.json  README.md  kalypso_symbiotic_data_bridge_config.json  setup.sh  supervisord.conf
.cargo/: config.toml
src/: contract_calls.rs  main.rs  server.rs  signing.rs  utils.rs
