[package]
name = "kalypso-symbiotic-data-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
config = "0.14.0"
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
hex = "0.4.3"
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3"

[profile.release]
strip = true
lto = true